# husky_codes

./: README.md
comm_ugv/: CMakeLists.txt  package.xml
comm_ugv/src/: comm_ugv.cpp
husky_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
husky_navigation/launch/: amcl_turtlebot3.launch  amcl_turtlebot3.launch~  move_base_turtlebot3.launch  move_base_turtlebot3.launch~  navigation_turtlebot3.launch~  navigation_turtlebot3_blank_map.launch  navigation_turtlebot3_blank_map.launch~  navigation_turtlebot3_mbzirc.launch~
husky_navigation/maps/: blank_map_86_55.pgm  blank_map_86_55.yaml  blank_map_86_55.yaml~  mbzirc_arena.pgm  mbzirc_arena.yaml  mbzirc_arena.yaml~  practice_arena_map.pgm  practice_arena_map.yaml
husky_navigation/src/: example_tf_listener.cpp  example_tf_listener.cpp~  map_navigation.cpp  map_navigation.cpp~
simple_controller/: package.xml
simple_controller/scripts/: controller.py  controller.py~  controller_auto.py  controller_auto.py~  controller_stop.py  controller_stop.py~
